...
  'main.mentor.story': 'قصتي',
  'main.mentor.subject': 'الموضوع',

  'main.mentorCardExpanded.button': 'محادثة',
  'main.mentorList.title': 'المرشدون',

  'main.mentorsTitleAndSearchButton': 'بحث',
  'main.mentorsTitleAndSearchButtonFiltersActive': 'المرشحات',
  'main.searchMentor.resetButton': 'إعادة ضبط',
  'main.searchMentor.searchField.placeholder': 'اكتب كلمة رئيسية',
  'main.searchMentor.showButton': 'عرض',
  'main.searchMentor.title': 'بحث',

  'main.settings.account.displayName': 'أسم العرض',

  'main.settings.account.email.change': 'تغيير البريد الالكتروني',
  'main.settings.account.email.fail': 'فشل تغيير البريد الإلكتروني!',
  'main.settings.account.email.fieldTitle': 'البريد الالكتروني',
  'main.settings.account.email.missing': 'لايوجد بريد الكتروني',
  'main.settings.account.email.success': 'تم تغيير البريد الالكتروني بنجاح',
...
  'main.settings.account.password.title': 'كلمه السر',

  'main.settings.account.profile.button': 'تعديل الملف الشخصي',
  'main.settings.account.profile.title': 'الملف الشخصي',

  'main.settings.account.title': 'إعدادت الحساب',
  'main.settings.account.userName': 'اسم المستخدم',

  'main.settings.deleteAccount.cancel': 'الغاء',
  'main.settings.deleteAccount.deleteAccount': 'حذف الحساب',
  'main.settings.deleteAccount.text1': 'هل انت متأكد انك تريد حذف حسابك؟',
  'main.settings.deleteAccount.text2': 'سيتم حذف جميع بياناتك من النظام.',
  'main.settings.deleteAccount.text3': 'لا يمكن إرجاع حسابك أو محادثاتك.',
...
  'meta.error': 'حدث خطأ ، يرجى المحاولة مرة أخرى',
  'meta.ok': 'حسنا',
  'meta.save': 'حفظ',

  'onboarding.displayName.bodyText':
    ' إذا كنت تريد عدم الكشف عن هويتك لمرشدينا ، فيرجى إدخال اسم عرض من خلاله لايمكن التعرف عليك.',
  'onboarding.displayName.inputTitle': 'اسم العرض',
  'onboarding.displayName.nextButton': 'استمرار',
  'onboarding.displayName.title': 'على وشك الإنتهاء',

  'onboarding.email.bodyText':
    '* سيساعدك إدخال عنوان بريدك الإلكتروني في استرداد كلمة مرورك لاحقًا في حالة فقدها. لن نستخدمه لأي شيء آخر.',
  'onboarding.email.inputTitle': 'البريد الإلكتروني *',
...
  'onboarding.welcome.text2': 'يمكنك مناقشة المرشد بثقة تامة',
  'onboarding.welcome.text3': 'نتمنى لك محادثه ممتعه!',
  'onboarding.welcome.title': 'مرحبا!',

  'tabs.chats': 'المحادثات',
  'tabs.mentors': 'المرشدين',
  'tabs.settings': 'الاعدادات',
};

