...

  const onPressSkill = (item: string) => {
    dispatch({ type: 'skillFilter/toggled', payload: { skillName: item } });
  };

  return (
    <RN.View testID="main.searchMentor.skills.view">
      <RN.View>
        <RN.Image
          style={styles.gradient}
          source={require('../../images/gradient.svg')}
          resizeMode="stretch"
          resizeMethod="scale"
...
